<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="guanwang"><u>www.aoshitang.com</u></string>

    <!-- welcom页面 -->
    <string name="ast_mob_sdk_welcome_title_label">账号登录</string>
    <string name="ast_mob_sdk_welcom_quicklogin_label">快速登录</string>
    <string name="ast_mob_sdk_welcom_astlogin_label">傲世堂账号</string>

    <!-- 登陆页面 -->
    <string name="ast_mob_sdk_app_name">AstMobSDK</string>
    <string name="ast_mob_sdk_head_title">傲世堂游戏</string>
    <string name="ast_mob_sdk_loading_check">检查账号中...</string>
    <string name="ast_mob_sdk_loading_express_id">快速登录中...</string>
    <string name="ast_mob_sdk_loading_main_id">账号登录中...</string>
    <string name="ast_mob_sdk_login_input_passwd_tip">密码:</string>
    <string name="ast_mob_sdk_login_input_passwd_label">请输入密码</string>
    <string name="ast_mob_sdk_login_page_img_tips">登录页面图片</string>
    <string name="ast_mob_sdk_login_btn_label">立即登录</string>
    <string name="ast_mob_sdk_login_remember_password_label">记住密码</string>
    <string name="ast_mob_sdk_login_forgot_password_label">忘记密码</string>
    <string name="ast_mob_sdk_login_title_label">傲世堂账号登录</string>
    <string name="ast_mob_sdk_login_reget_password_label">找回密码</string>
    <string name="ast_mob_sdk_login_input_user_name_tip">账号:</string>
    <string name="ast_mob_sdk_login_input_user_name_label">普通帐号/手机号</string>
    <string name="ast_mob_sdk_login_third_loading">数据加载中...</string>
    <string name="ast_mob_sdk_login_tips">登录中&#8230;</string>
    <string name="ast_mob_sdk_login_label">登录</string>

    <!-- 注册页 -->
    <string name="ast_mob_sdk_reg_agree"><u>&#x0020;同意</u></string>
    <string name="ast_mob_sdk_reg_protocol"><u>《傲世堂服务使用协议》</u></string>
    <string name="ast_mob_sdk_reg_tips">正在注册&#8230;</string>
    <string name="ast_mob_sdk_reg_succeed">恭喜，注册成功</string>
    <string name="ast_mob_sdk_reg_title_main">用户名注册</string>
    <string name="ast_mob_sdk_reg_title_express">快速注册</string>
    <string name="ast_mob_sdk_reg_tab_express">手机号注册</string>
    <string name="ast_mob_sdk_reg_page_username_tips">5-20个字母数字组合</string>
    <string name="ast_mob_sdk_reg_page_password_tips">6-20个字符</string>
    <string name="ast_mob_sdk_reg_page_captcha">输入验证码，点击图片刷新</string>
    <string name="ast_mob_sdk_reg_btn_label">完成注册</string>
    <string name="ast_mob_sdk_reg_agree_protocol">傲世堂服务协议</string>
    <string name="ast_mob_sdk_reg_account_perfect">完善账号</string>
    <string name="ast_mob_sdk_reg_account_perfect_ok">确认完善</string>
    <string name="ast_mob_sdk_reg_mobile_tips">账号:请输入手机号</string>
    <string name="ast_mob_sdk_reg_mobile_captcha_tips">验证码:4位数字</string>
    <string name="ast_mob_sdk_reg_mobile_pwd_tips">6-20个字符,不含空格键及引号</string>
    <string name="ast_mob_sdk_reg_mobile_verify_tips">验证手机号</string>
    <string name="ast_mob_sdk_one_key_login_label">游客一键登录    ></string>
    <string name="ast_mob_sdk_register_label">注册帐号 </string>
    <!-- 支付页面 -->
    <string name="ast_mob_sdk_pay_alipay">支付宝</string>
    <string name="ast_mob_sdk_pay_mobile">神州行充值卡</string>
    <string name="ast_mob_sdk_pay_unicom">联通充值卡</string>
    <string name="ast_mob_sdk_pay_telcom">电信充值卡</string>
    <string name="ast_mob_sdk_pay_aliwap">网银充值</string>
    <string name="ast_mob_sdk_pay_record">充值记录</string>
    <string name="ast_mob_sdk_pay_alipay_user">账号：%1$s</string>
    <string name="ast_mob_sdk_pay_alipay_money">充值金额：%1$s元</string>
    <string name="ast_mob_sdk_pay_alipay_goods">购买商品：%1$s%2$s</string>
    <string name="ast_mob_sdk_pay_confirm">确认充值</string>
    <string name="ast_mob_sdk_pay_debit_card">借记卡</string>
    <string name="ast_mob_sdk_pay_credit_card">信用卡</string>
    <string name="ast_mob_sdk_pay_record_account">账号:%1$s</string>
    <string name="ast_mob_sdk_pay_head_title">支付页面</string>
    <string name="ast_mob_sdk_pay_ali_other_amount">请输入其他金额</string>
    <string name="ast_mob_sdk_pay_input_card_number">请输入充值卡卡号</string>
    <string name="ast_mob_sdk_pay_input_card_pwd">请输入充值卡密码</string>
    <string name="ast_mob_sdk_pay_confirm_install_hint">"安装提示"</string>
    <string name="ast_mob_sdk_pay_confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
    <string name="ast_mob_sdk_pay_ensure">"确定"</string>
    <string name="ast_mob_sdk_pay_cancel">"取消"</string>

    <!-- 悬浮菜单 -->
    <string name="ast_mob_sdk_float_menu_switch_user">切换帐号</string>
    <string name="ast_mob_sdk_float_menu_customer_service">反馈</string>
    <string name="ast_mob_sdk_float_menu_perfect_account">完善账号</string>
    <string name="phone_bind_label">绑定账号</string>
    <string name="phone_number_label">手机号:</string>
    <string name="bind_number_account">账号:</string>
    <string name="phone_bind_to_register">注册账号 ></string>
    <string name="title_activity_main_login">MainLoginActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>