<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/ast_mob_sdk_white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:id="@+id/ast_mob_sdk_alipay_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="192dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/ast_mob_sdk_pay_ali" />

        <TextView
            android:id="@+id/ast_mob_sdk_alipay_user"
            style="@style/ast_mob_sdk_pay_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ast_mob_sdk_alipay_icon"
            android:layout_marginLeft="123dp"
            android:layout_marginTop="14dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/ast_mob_sdk_pay_alipay_user" />

        <TextView
            android:id="@+id/ast_mob_sdk_alipay_money"
            style="@style/ast_mob_sdk_pay_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ast_mob_sdk_alipay_user"
            android:layout_marginLeft="123dp"
            android:layout_marginTop="7dp"
            android:text="@string/ast_mob_sdk_pay_alipay_money" />

        <TextView
            android:id="@+id/ast_mob_sdk_alipay_goods"
            style="@style/ast_mob_sdk_pay_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ast_mob_sdk_alipay_money"
            android:layout_marginLeft="123dp"
            android:layout_marginTop="7dp"
            android:text="@string/ast_mob_sdk_pay_alipay_goods" />

        <EditText
            android:id="@+id/ast_mob_sdk_alipay_input"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ast_mob_sdk_alipay_goods"
            android:layout_marginLeft="123dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ast_mob_sdk_input_bg"
            android:hint="@string/ast_mob_sdk_pay_ali_other_amount"
            android:imeOptions="actionGo"
            android:inputType="number"
            android:maxLength="6"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="12sp" />

        <Button
            android:id="@+id/ast_mob_sdk_alipay_pay_ok"
            style="@style/ast_mob_sdk_pay_bt_red"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ast_mob_sdk_alipay_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="@drawable/ast_mob_sdk_bt_red"
            android:text="@string/ast_mob_sdk_pay_confirm" />
    </RelativeLayout>

</ScrollView>