<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/ast_mob_sdk_main_background_color"
    android:orientation="vertical" >

    <include layout="@layout/ast_mob_sdk_head" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <FrameLayout
            android:id="@+id/ast_mob_sdk_pay_myframe"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="84dp"
            android:background="@color/ast_mob_sdk_white"
            android:orientation="vertical" >
        </FrameLayout>

        <LinearLayout
            android:id="@+id/ast_mob_sdk_pay_left_side"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/ast_mob_sdk_pay_left_side_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ast_mob_sdk_pay_left_side_1"
                style="@style/ast_mob_sdk_pay_left_side_font_s"
                android:layout_width="84dp"
                android:layout_height="39dp"
                android:background="@color/ast_mob_sdk_pay_left_side_bg_s"
                android:clickable="true"
                android:gravity="center"
                android:onClick="leftNavigationBar"
                android:tag="ast_mob_sdk_pay_left_side_1"
                android:text="@string/ast_mob_sdk_pay_alipay" />

            <TextView
                android:id="@+id/ast_mob_sdk_pay_left_side_4"
                style="@style/ast_mob_sdk_pay_left_side_font_d"
                android:layout_width="84dp"
                android:layout_height="39dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="leftNavigationBar"
                android:tag="ast_mob_sdk_pay_left_side_4"
                android:text="@string/ast_mob_sdk_pay_mobile" />

            <TextView
                android:id="@+id/ast_mob_sdk_pay_left_side_2"
                style="@style/ast_mob_sdk_pay_left_side_font_d"
                android:layout_width="84dp"
                android:layout_height="39dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="leftNavigationBar"
                android:tag="ast_mob_sdk_pay_left_side_2"
                android:text="@string/ast_mob_sdk_pay_unicom" />

            <TextView
                android:id="@+id/ast_mob_sdk_pay_left_side_3"
                style="@style/ast_mob_sdk_pay_left_side_font_d"
                android:layout_width="84dp"
                android:layout_height="39dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="leftNavigationBar"
                android:tag="ast_mob_sdk_pay_left_side_3"
                android:text="@string/ast_mob_sdk_pay_telcom" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>