<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ast_mob_sdk_register_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:alpha="0.9"
    android:background="#ECECEC"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="11dp" >

    <RelativeLayout
        android:layout_width="260dp"
        android:layout_height="34dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/phone_bind_label"
            android:textColor="#000000"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/ast_back_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_back" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="260dp"
        android:layout_height="34dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp" >

        <EditText
            android:id="@+id/ast_mob_sdk_phone_et"
            style="@style/ast_mob_sdk_input_font"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ast_mob_sdk_input_background"
            android:paddingLeft="55dip"
            android:paddingRight="40dip"
            android:singleLine="true"
            android:textSize="12sp" />

        <Button
            android:id="@+id/clear"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_alignRight="@+id/ast_mob_sdk_phone_et"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_close_smal" />

        <TextView
            android:id="@+id/ast_mob_sdk_register_username_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:contentDescription="@string/ast_mob_sdk_login_page_img_tips"
            android:text="@string/phone_number_label"
            android:textColor="#797876" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line_regist_login"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp" >

        <Button
            android:id="@+id/ast_mob_sdk_nextstep_btn"
            style="@style/ast_mob_sdk_login_button_font"
            android:layout_width="fill_parent"
            android:layout_height="27dp"
            android:layout_marginTop="7dp"
            android:background="#7C0000"
            android:onClick="login"
            android:text="下一步" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/other_bind"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="11dp"
        android:visibility="visible" >

        <TextView
            android:id="@+id/login_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="登录并绑定"
            android:textColor="#ff0000" />

        <TextView
            android:id="@+id/regist_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="注册并绑定"
            android:textColor="#ff0000" />
    </RelativeLayout>

</LinearLayout>