<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/ast_mob_sdk_main_background_color"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="28dip"
        android:layout_marginRight="28dip"
        android:layout_marginTop="7dip"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:id="@+id/ast_mob_sdk_reg_input_area"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/ast_mob_sdk_reg_username"
                    style="@style/ast_mob_sdk_input_font"
                    android:layout_width="fill_parent"
                    android:layout_height="37dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ast_mob_sdk_input_background"
                    android:hint="@string/ast_mob_sdk_reg_page_username_tips"
                    android:nextFocusDown="@+id/ast_mob_sdk_reg_passpword"
                    android:paddingLeft="50dip"
                    android:paddingRight="30dip"
                    android:singleLine="true"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/ast_mob_sdk_username_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ast_mob_sdk_username_tips"
                    android:contentDescription="@string/ast_mob_sdk_reg_page_username_tips" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/ast_mob_sdk_reg_passpword"
                    style="@style/ast_mob_sdk_input_font"
                    android:layout_width="fill_parent"
                    android:layout_height="37dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="15dip"
                    android:background="@drawable/ast_mob_sdk_input_background"
                    android:hint="@string/ast_mob_sdk_reg_page_password_tips"
                    android:paddingLeft="50dip"
                    android:paddingRight="30dip"
                    android:password="true"
                    android:singleLine="true"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/ast_mob_passsword_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ast_mob_sdk_login_password_tips"
                    android:contentDescription="@string/ast_mob_sdk_reg_page_username_tips" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/ast_mob_sdk_reg_captcha_bg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ast_mob_sdk_reg_input_area"
            android:visibility="gone" >

            <EditText
                android:id="@+id/ast_mob_sdk_reg_captcha_input"
                style="@style/ast_mob_sdk_input_font"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="90dp"
                android:layout_marginTop="15dip"
                android:background="@drawable/ast_mob_sdk_input_background"
                android:hint="@string/ast_mob_sdk_reg_page_captcha"
                android:imeOptions="actionGo"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ast_mob_sdk_reg_captcha"
                android:layout_width="85dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/ast_mob_sdk_reg_captcha_input"
                android:layout_centerVertical="true"
                android:contentDescription="@string/ast_mob_sdk_reg_page_username_tips"
                android:scaleType="fitXY" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ast_mob_sdk_line_forget_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ast_mob_sdk_reg_captcha_bg"
            android:gravity="center_vertical" >
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ast_mob_sdk_reg_line_regist_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ast_mob_sdk_line_forget_password"
            android:layout_marginTop="8dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ast_mob_sdk_reg_main_submit_btn"
                style="@style/ast_mob_sdk_pay_bt_red"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="35dip"
                android:background="@drawable/ast_mob_sdk_bt_red"
                android:text="@string/ast_mob_sdk_reg_btn_label" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>